# MichelangeloCC

./: .bumpversion.cfg  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  install.sh  pyproject.toml  uninstall.sh
.claude/skills/3d-modeling/: SKILL.md
.claude/skills/3d-modeling/examples/: bracket.py  enclosure.py  gear.py  hook.py  keychain.py  phone_stand.py  vase.py
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: CLI.md  DECISIONS.md  README.md
src/michelangelocc/: __init__.py  cli.py  session.py
src/michelangelocc/core/: __init__.py  exporter.py  modeler.py  repairer.py  validator.py
src/michelangelocc/server/: __init__.py  app.py  watcher.py
src/michelangelocc/utils/: __init__.py
tests/: __init__.py  conftest.py
tests/integration/: test_cli.py  test_server.py
tests/unit/: test_exporter.py  test_modeler.py  test_repairer.py  test_session.py  test_validator.py  test_watcher.py
